Dynamic Weighted Ensemble

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "outputs": [],
    "source": [
     "\n",
@@ -769,7 +769,7 @@
    "source": [
     "models = [svm_model, knn_model, rf_model]  # List of trained models\n",
     "# weights = [{0: 0.6, 1: 0.4, 2: 0.8}, {0: 0.5, 1: 0.5, 2: 0.7}, {0: 0.7, 1: 0.3, 2: 0.9}]  # Example weights per class\n",
-    "y_dynamic_weighted_ensemble = dynamic_weighted_ensemble(models, X_test, y_test)\n"
+    "y_dynamic_weighted_ensemble = dynamic_weighted_ensemble(models, X_test, y_train)\n"
    ],
    "metadata": {
     "collapsed": false
@@ -777,9 +777,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# todo: change!\n",
+    "\n",
+    "def dynamic_weighted_ensemble2(models, X_test, y_test, custom_weights=None):\n",
+    "    \"\"\"\n",
+    "    Combines predictions from multiple models using dynamically assigned weights per class.\n",
+    "\n",
+    "    Arguments:\n",
+    "        models (list): List of trained models.\n",
+    "        X_test (array-like): Test feature set.\n",
+    "        y_test (array-like): True labels.\n",
+    "        custom_weights (list of dicts, optional): A list where each dictionary contains class-specific weights for a model.\n",
+    "\n",
+    "    Returns:\n",
+    "        y_final_pred: Final predictions using dynamically weighted voting.\n",
+    "    \"\"\"\n",
+    "    all_probs = []\n",
+    "    num_classes = len(np.unique(y_test))  # Get number of unique classes dynamically\n",
+    "\n",
+    "    # Initialize the final prediction list\n",
+    "    final_pred = [0] * len(X_test)\n",
+    "\n",
+    "    for model_idx, model in enumerate(models):\n",
+    "        if hasattr(model, \"predict_proba\"):\n",
+    "            # Predict probabilities if available\n",
+    "            probs = model.predict_proba(X_test)\n",
+    "        else:\n",
+    "            # For models without predict_proba, predict class labels\n",
+    "            preds = model.predict(X_test)\n",
+    "            # Convert to one-hot encoding\n",
+    "            probs = np.zeros((len(preds), num_classes))\n",
+    "            probs[np.arange(len(preds)), preds] = 1\n",
+    "        all_probs.append(probs)\n",
+    "\n",
+    "    # For each instance in the test set\n",
+    "    for i in range(len(X_test)):\n",
+    "        classify = np.zeros(num_classes)\n",
+    "\n",
+    "        # Combine predictions from all models\n",
+    "        for j in range(len(models)):\n",
+    "            # Get class probabilities or class predictions\n",
+    "            if hasattr(models[j], \"predict_proba\"):\n",
+    "                # Weight the probabilities for each class (model's contribution is based on its probability)\n",
+    "                for class_idx in range(num_classes):\n",
+    "                    classify[class_idx] += all_probs[j][i, class_idx] * custom_weights[j].get(class_idx, 0)\n",
+    "            else:\n",
+    "                # For models with no probabilities, weight the predicted class labels (simple voting)\n",
+    "                predicted_class = np.argmax(all_probs[j][i])  # We use the highest probability as the predicted class\n",
+    "                classify[predicted_class] += custom_weights[j].get(predicted_class, 0)\n",
+    "\n",
+    "        # Select the class with the highest weighted sum\n",
+    "        final_pred[i] = np.argmax(classify)\n",
+    "\n",
+    "    # Evaluate model performance (assuming display_metrics_and_confusion_matrix is implemented elsewhere)\n",
+    "    display_metrics_and_confusion_matrix(\"Dynamic Weighted Ensemble\", y_test, final_pred)\n",
+    "\n",
+    "    return final_pred\n",
+    "\n",
+    "# Example usage:\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Tensor is unhashable. Instead, use tensor.ref() as the key.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[70], line 8\u001B[0m\n\u001B[0;32m      1\u001B[0m models \u001B[38;5;241m=\u001B[39m [svm_model, knn_model, rf_model]  \u001B[38;5;66;03m# List of trained models\u001B[39;00m\n\u001B[0;32m      2\u001B[0m weights \u001B[38;5;241m=\u001B[39m [\n\u001B[0;32m      3\u001B[0m     {\u001B[38;5;241m0\u001B[39m: \u001B[38;5;241m0.4\u001B[39m, \u001B[38;5;241m1\u001B[39m: \u001B[38;5;241m0.4\u001B[39m, \u001B[38;5;241m2\u001B[39m: \u001B[38;5;241m0.4\u001B[39m, \u001B[38;5;241m3\u001B[39m: \u001B[38;5;241m0.6\u001B[39m, \u001B[38;5;241m4\u001B[39m: \u001B[38;5;241m0.4\u001B[39m, \u001B[38;5;241m5\u001B[39m: \u001B[38;5;241m0.6\u001B[39m, \u001B[38;5;241m6\u001B[39m: \u001B[38;5;241m0.45\u001B[39m, \u001B[38;5;241m7\u001B[39m: \u001B[38;5;241m0.3\u001B[39m, \u001B[38;5;241m8\u001B[39m: \u001B[38;5;241m0.48\u001B[39m, \u001B[38;5;241m9\u001B[39m: \u001B[38;5;241m0.4\u001B[39m},  \u001B[38;5;66;03m# Weights for model 1\u001B[39;00m\n\u001B[0;32m      4\u001B[0m     {\u001B[38;5;241m0\u001B[39m: \u001B[38;5;241m0.3\u001B[39m, \u001B[38;5;241m1\u001B[39m: \u001B[38;5;241m0.1\u001B[39m, \u001B[38;5;241m2\u001B[39m: \u001B[38;5;241m0.5\u001B[39m, \u001B[38;5;241m3\u001B[39m: \u001B[38;5;241m0.3\u001B[39m, \u001B[38;5;241m4\u001B[39m: \u001B[38;5;241m0.3\u001B[39m, \u001B[38;5;241m5\u001B[39m: \u001B[38;5;241m0.1\u001B[39m, \u001B[38;5;241m6\u001B[39m: \u001B[38;5;241m0.45\u001B[39m, \u001B[38;5;241m7\u001B[39m: \u001B[38;5;241m0.4\u001B[39m, \u001B[38;5;241m8\u001B[39m: \u001B[38;5;241m0.26\u001B[39m, \u001B[38;5;241m9\u001B[39m: \u001B[38;5;241m0.3\u001B[39m},  \u001B[38;5;66;03m# Weights for model 2\u001B[39;00m\n\u001B[0;32m      5\u001B[0m     {\u001B[38;5;241m0\u001B[39m: \u001B[38;5;241m0.3\u001B[39m, \u001B[38;5;241m1\u001B[39m: \u001B[38;5;241m0.5\u001B[39m, \u001B[38;5;241m2\u001B[39m: \u001B[38;5;241m0.1\u001B[39m, \u001B[38;5;241m3\u001B[39m: \u001B[38;5;241m0.1\u001B[39m, \u001B[38;5;241m4\u001B[39m: \u001B[38;5;241m0.3\u001B[39m, \u001B[38;5;241m5\u001B[39m: \u001B[38;5;241m0.3\u001B[39m, \u001B[38;5;241m6\u001B[39m: \u001B[38;5;241m0.1\u001B[39m, \u001B[38;5;241m7\u001B[39m: \u001B[38;5;241m0.4\u001B[39m, \u001B[38;5;241m8\u001B[39m: \u001B[38;5;241m0.26\u001B[39m, \u001B[38;5;241m9\u001B[39m: \u001B[38;5;241m0.3\u001B[39m}   \u001B[38;5;66;03m# Weights for model 3\u001B[39;00m\n\u001B[0;32m      6\u001B[0m ]\n\u001B[1;32m----> 8\u001B[0m y_dynamic_weighted_ensemble \u001B[38;5;241m=\u001B[39m \u001B[43mdynamic_weighted_ensemble2\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmodels\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mX_test\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43my_test\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcustom_weights\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mweights\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[1;32mIn[69], line 44\u001B[0m, in \u001B[0;36mdynamic_weighted_ensemble2\u001B[1;34m(models, X_test, y_test, custom_weights)\u001B[0m\n\u001B[0;32m     41\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mhasattr\u001B[39m(models[j], \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mpredict_proba\u001B[39m\u001B[38;5;124m\"\u001B[39m):\n\u001B[0;32m     42\u001B[0m     \u001B[38;5;66;03m# Weight the probabilities for each class (model's contribution is based on its probability)\u001B[39;00m\n\u001B[0;32m     43\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m class_idx \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(num_classes):\n\u001B[1;32m---> 44\u001B[0m         classify[class_idx] \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m all_probs[j][i, class_idx] \u001B[38;5;241m*\u001B[39m \u001B[43mcustom_weights\u001B[49m\u001B[43m[\u001B[49m\u001B[43mj\u001B[49m\u001B[43m]\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget\u001B[49m\u001B[43m(\u001B[49m\u001B[43mclass_idx\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m     45\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m     46\u001B[0m     \u001B[38;5;66;03m# For models with no probabilities, weight the predicted class labels (simple voting)\u001B[39;00m\n\u001B[0;32m     47\u001B[0m     predicted_class \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39margmax(all_probs[j][i])  \u001B[38;5;66;03m# We use the highest probability as the predicted class\u001B[39;00m\n",
+      "File \u001B[1;32mC:\\Program Files\\Python310\\lib\\site-packages\\tensorflow\\python\\framework\\ops.py:373\u001B[0m, in \u001B[0;36m_EagerTensorBase.__hash__\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    371\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__hash__\u001B[39m(\u001B[38;5;28mself\u001B[39m) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m \u001B[38;5;28mint\u001B[39m:\n\u001B[0;32m    372\u001B[0m   \u001B[38;5;66;03m# EagerTensors are never hashable.\u001B[39;00m\n\u001B[1;32m--> 373\u001B[0m   \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mTypeError\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mTensor is unhashable. \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    374\u001B[0m                   \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mInstead, use tensor.ref() as the key.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[1;31mTypeError\u001B[0m: Tensor is unhashable. Instead, use tensor.ref() as the key."
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "models = [svm_model, knn_model, rf_model]  # List of trained models\n",
+    "weights = [\n",
+    "    {0: 0.4, 1: 0.4, 2: 0.4, 3: 0.6, 4: 0.4, 5: 0.6, 6: 0.45, 7: 0.3, 8: 0.48, 9: 0.4},  # Weights for model 1\n",
+    "    {0: 0.3, 1: 0.1, 2: 0.5, 3: 0.3, 4: 0.3, 5: 0.1, 6: 0.45, 7: 0.4, 8: 0.26, 9: 0.3},  # Weights for model 2\n",
+    "    {0: 0.3, 1: 0.5, 2: 0.1, 3: 0.1, 4: 0.3, 5: 0.3, 6: 0.1, 7: 0.4, 8: 0.26, 9: 0.3}   # Weights for model 3\n",
+    "]\n",
+    "\n",
+    "y_dynamic_weighted_ensemble = dynamic_weighted_ensemble2(models, X_test, y_test, custom_weights=weights)\n"
+   ],
    "metadata": {
     "collapsed": false
    }
