--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -131,7 +131,12 @@
    "source": [
     "## MODELS\n",
     "\n",
-    "**BASELINE MODEL: simple neural network**"
+    "**BASELINE MODEL: simple neural network**\n",
+    "A machine learning model inspired by the human brain, consisting of layers of neurons (nodes). It processes input data through weighted connections and activation functions to learn patterns.\n",
+    "\n",
+    "*Input Layer:* Receives raw data.\n",
+    "*Hidden Layers:* Extracts features using weighted sums and activation functions.\n",
+    "*Output Layer:* Produces the final prediction."
    ],
    "metadata": {
     "collapsed": false
@@ -202,7 +207,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**KNN**"
+    "**KNN**\n",
+    "A simple, non-parametric algorithm that classifies a data point based on the majority class of its K nearest neighbors. It uses distance metrics like Euclidean distance for classification or regression"
    ],
    "metadata": {
     "collapsed": false
@@ -233,7 +239,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**SVM**"
+    "**SVM**\n",
+    "A supervised learning algorithm that finds the best hyperplane to separate classes in a high-dimensional space. It can use kernels to handle non-linearly separable data."
    ],
    "metadata": {
     "collapsed": false
@@ -264,7 +271,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Decision Tree**"
+    "**Decision Tree**\n",
+    "A model that splits data into branches based on feature conditions, forming a tree-like structure. It makes decisions by following these branches down to a leaf node, which represents the final prediction"
    ],
    "metadata": {
     "collapsed": false
@@ -295,7 +303,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**AdaBoost**"
+    "**AdaBoost**\n",
+    "An ensemble learning method that combines multiple weak classifiers (usually decision trees) into a strong classifier by assigning higher weights to misclassified points and training iteratively."
    ],
    "metadata": {
     "collapsed": false
@@ -326,7 +335,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Random Forest**"
+    "**Random Forest**\n",
+    "An ensemble method that builds multiple decision trees and combines their outputs (by majority vote for classification or averaging for regression) to improve accuracy and reduce overfitting."
    ],
    "metadata": {
     "collapsed": false
@@ -888,7 +898,15 @@
     "## Predict With Transformations\n",
     "in this section we will try to pre proces MNIST data with some transfornation and check how it will effect the predictions of the models\n",
     "\n",
-    "**Fourier transformation:**"
+    "**Fourier transformation:**\n",
+    "A mathematical technique that converts a function or signal from the time domain to the frequency domain. It decomposes a signal into a sum of sinusoidal components (sines and cosines), making it useful for analyzing frequency content.\n",
+    "\n",
+    "*Usefulness:* Converts images to the frequency domain, allowing the classifier to focus on fundamental shape structures rather than pixel values.\n",
+    "\n",
+    "*Example:* A \"0\" and an \"O\" have different pixel intensity distributions, but their frequency domain representations can highlight key differences.\n",
+    "\n",
+    "\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -1123,7 +1141,12 @@
    "cell_type": "markdown",
    "source": [
     "\n",
-    "**Zernike Moment**"
+    "**Zernike Moment**\n",
+    " Feature extraction technique based on orthogonal Zernike polynomials, used to capture rotation-invariant shape characteristics of an image, often applied in character recognition.\n",
+    "\n",
+    "*Usefulness:* Extracts rotation-invariant features, making classification robust to small rotations.\n",
+    "\n",
+    "*Example:* A slightly rotated \"6\" and an upright \"6\" will have similar Zernike features, helping the model recognize them as the same digit.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -1294,7 +1317,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**PCA:**"
+    "**PCA:**\n",
+    "A dimensionality reduction technique that transforms correlated features into a set of uncorrelated components (principal components), preserving the most important information while reducing complexity.\n",
+    "\n",
+    "*Usefulness:* Reduces the dimensionality of the dataset while preserving the most important variance, speeding up training and improving efficiency.\n",
+    "\n",
+    "*Example:* A 28×28 pixel image (784 features) can be reduced to ~50 principal components, capturing most of the digit’s characteristics while reducing complexity.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -1312,7 +1340,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Deskew:**"
+    "**Deskew:**\n",
+    "A preprocessing technique that corrects the tilt (skew) of an image, often applied to scanned documents or handwritten text to align content properly for better recognition.\n",
+    "\n",
+    "*Usefulness:* Corrects misaligned digits by straightening them, ensuring consistent input for the classifier.\n",
+    "\n",
+    "*Example:* A tilted \"1\" may look like a \"/\" but after deskewing, it appears more like a proper \"1,\" reducing misclassification."
    ],
    "metadata": {
     "collapsed": false
@@ -1330,7 +1363,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Elastic Deformations:**"
+    "**Elastic Deformations:**\n",
+    "A transformation that distorts an image by applying small, random displacement fields, commonly used in data augmentation to improve model generalization, especially for handwritten text recognition.\n",
+    "\n",
+    "*Usefulness:* Creates realistic variations of handwritten digits by slightly warping the shape, improving model generalization.\n",
+    "\n",
+    "*Example:* A \"3\" written slightly differently due to handwriting variation can still be correctly classified after training with deformed samples."
    ],
    "metadata": {
     "collapsed": false
@@ -1348,7 +1386,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Morphological Operations:**"
+    "**Morphological Operations:**\n",
+    " Image processing techniques (e.g., erosion, dilation, opening, and closing) used to modify the structure of binary or grayscale images, often for noise removal or shape analysis.\n",
+    "\n",
+    "*Usefulness:*\n",
+    " Helps clean up digit images by removing small noise (erosion) or filling gaps in strokes (dilation). This improves the quality of the input for classification.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -1426,7 +1468,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Cosine Distance:**"
+    "**Cosine Distance:**\n",
+    "Measures the angle between two vectors, focusing on direction rather than magnitude.\n",
+    "Useful when brightness variations affect pixel intensity but not digit shape."
    ],
    "metadata": {
     "collapsed": false
@@ -1475,7 +1519,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Euclidean Distance:**"
+    "**Euclidean Distance:**\n",
+    "Measures the straight-line distance between two points in a high-dimensional space.\n",
+    "Commonly used for KNN classification of MNIST digits. (default of KNN)"
    ],
    "metadata": {
     "collapsed": false
@@ -1524,7 +1570,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Manhattan Distance:**"
+    "**Manhattan Distance:**\n",
+    "Measures distance by summing absolute differences between coordinates.\n",
+    "More robust to outliers than Euclidean distance."
    ],
    "metadata": {
     "collapsed": false
